# cocola

./: .editorconfig  .env.example  .gitignore  .golangci.yml  .goreleaser.yml  .pre-commit-config.yaml  .prettierignore  AGENTS.md  LICENSE  Makefile  README.md  go.work  go.work.sum  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  ruff.toml  tsconfig.base.json
apps/agent-runtime/: Dockerfile  pyproject.toml
apps/agent-runtime/cocola_agent_runtime/: __init__.py  __main__.py  agent_provider.py  checkpoint.py  claude_sdk_provider.py  echo_provider.py  grpc_limits.py  mcp_loader.py  objstore.py  project_git.py  prompt_loader.py  runtime_registry.py  sandbox_binder.py  sandbox_client.py  sandbox_demo.py  sandbox_tools.py  server.py  session_map.py  shim_provider.py  skill_loader.py  skill_reconciler.py
apps/agent-runtime/tests/: conftest.py  test_agent_shim_mcp.py  test_agent_shim_mcp_check.py  test_agent_shim_mcp_errors.py  test_attachment_oss_pull.py  test_attachment_provisioning.py  test_claude_sdk_provider.py  test_cocola_sandbox_cli.py  test_composition.py  test_echo_provider.py  test_grpc_limits.py  test_mcp_loader.py  test_metrics.py  test_objstore.py  test_project_git.py  test_prompt_loader.py  test_runtime_registry.py  test_sandbox_binding.py  test_sandbox_tools.py  test_server.py  test_session_map.py  test_shim_provider.py  test_skill_loader.py  test_tracing.py
apps/llm-gateway/: Dockerfile  pyproject.toml
apps/llm-gateway/cocola_llm_gateway/: __init__.py  __main__.py  anthropic_codec.py  bootstrap.py  config.py  conversation_trace.py  db_registry.py  issue_token.py  middleware.py  registry.py  server.py  service.py  types.py
apps/llm-gateway/cocola_llm_gateway/auth/: __init__.py  identity.py  jwt.py  revocation.py
apps/llm-gateway/tests/: conftest.py  test_anthropic_nonstream.py  test_auth.py  test_bootstrap.py  test_codec.py  test_conversation_trace.py  test_db_registry.py  test_fake_upstream.py  test_ledger.py  test_memory_adapter.py  test_metrics.py  test_middleware.py  test_postgres_parity.py  test_quota.py  test_quota_overrides.py  test_registry.py  test_responses.py  test_revocation.py  test_secret_indirection.py  test_server_auth_quota.py  test_server_http.py  test_service.py  test_smoke.py  test_timeout_defaults.py  test_token_passthrough_e2e.py  test_tool_use_passthrough.py
(+934 files in other folders)
