[project]
name = "cocola-agent-runtime"
version = "0.0.1"
description = "Agent runtime — orchestrates Claude Code Agent SDK sessions and bridges to sandbox-manager."
requires-python = ">=3.11"
dependencies = [
    "cocola-common",
    "claude-agent-sdk>=0.1.0",
    "grpcio>=1.64",
    "anyio>=4.3",
    "pydantic>=2.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cocola_agent_runtime"]

[tool.uv.sources]
cocola-common = { path = "../../packages/py-common", editable = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
