[project]
name = "cocola-llm-gateway"
version = "0.0.1"
description = "LLM gateway — unified token purchasing, per-tenant quota, model routing."
requires-python = ">=3.11"
dependencies = [
    "cocola-common",
    "httpx>=0.27",
    "pydantic>=2.7",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "redis>=5.0",
    "psycopg[binary]>=3.1",
    "psycopg-pool>=3.2",
    "opentelemetry-instrumentation-fastapi>=0.49b0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cocola_llm_gateway"]

[tool.uv.sources]
cocola-common = { path = "../../packages/py-common", editable = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
